--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Lightweight web server for node projects",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run unitTest && npm run intTest",
-    "unitTest": "mocha --recursive test/unit/",
-    "intTest": "mocha --recursive test/integration/"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,9 +23,12 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "dependencies": {
-    "output-manager": "^1.0.1"
+    "output-manager": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "^3.2.0"
+    "jest": "^18.1.0"
+  },
+  "jest": {
+    "verbose": true
   }
 }
