--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lightweight web server for node projects",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
