--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-lite",
-  "version": "0.0.1",
+  "version": "0.5.0",
   "description": "Lightweight web server for node projects",
   "main": "lib/index.js",
   "scripts": {
@@ -23,10 +23,12 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "dependencies": {
-    "output-manager": "^2.0.2"
+    "date-utilz": "0.0.1",
+    "output-manager": "^2.1.0",
+    "string-utilz": "^1.0.0"
   },
   "devDependencies": {
-    "jest": "^18.1.0"
+    "jest": "^19.0.2"
   },
   "jest": {
     "verbose": true
