--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Lightweight web server for node projects",
   "main": "lib/index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,8 @@
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "dependencies": {
     "date-utilz": "0.0.1",
-    "output-manager": "^2.1.0",
-    "string-utilz": "^1.0.0"
+    "output-manager": "^3.0.0",
+    "string-utilz": "^1.3.0"
   },
   "devDependencies": {
     "jest": "^19.0.2"
