--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "dependencies": {
-    "date-utilz": "0.0.1",
+    "date-utilz": "^0.0.2",
     "output-manager": "^3.0.0",
+    "promise": "^7.1.1",
     "string-utilz": "^1.3.0"
   },
   "devDependencies": {
