--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "author": "MaddHacker <hacker@maddhacker.com> (http://www.maddhacker.com)",
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
+  "engines": {
+    "node": ">=4.0.0",
+    "npm": ">=2.14.2"
+  },
   "dependencies": {
     "date-utilz": "^0.0.2",
     "output-manager": "^3.0.0",
