--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "server-lite",
   "version": "0.5.0",
   "description": "Lightweight web server for node projects",
-  "main": "lib/index.js",
+  "main": "lib/server-lite.js",
   "scripts": {
     "test": "jest --coverage --colors"
   },
