--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
   "dependencies": {
     "date-utilz": "^0.0.2",
     "output-manager": "^3.0.0",
-    "promise": "^7.1.1",
-    "string-utilz": "^1.3.0"
+    "promise": "^7.1.1"
   },
   "devDependencies": {
     "jest": "^19.0.2"
