--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "concatenate css"
   ],
   "author": "MaddHacker <hacker@maddhacker.com> (http://www.maddhacker.com)",
+  "contributors": [
+    "MaddHacker <hacker@maddhacker.com> (https://www.maddhacker.com)",
+    "theFieryDev <thefierydev@gmail.com> (https://www.thefierydev.com)"
+  ],
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "engines": {
@@ -40,10 +44,10 @@
   "dependencies": {
     "date-utilz": "^0.0.2",
     "output-manager": "^3.0.0",
-    "promise": "^7.1.1"
+    "promise": "^8.0.1"
   },
   "devDependencies": {
-    "jest": "^19.0.2"
+    "jest": "^22.4.4"
   },
   "jest": {
     "verbose": true
