--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-lite",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Lightweight web server for node projects",
   "main": "lib/server-lite.js",
   "scripts": {
@@ -38,16 +38,16 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/MaddHacker/server-lite#readme",
   "engines": {
-    "node": ">=6.0.0",
-    "npm": ">=3.8.6"
+    "node": ">=10.0.0",
+    "npm": ">=5.0.0"
   },
   "dependencies": {
-    "date-utilz": "^0.0.2",
-    "output-manager": "^3.0.0",
-    "promise": "^8.0.1"
+    "date-utilz": "^0.0.3",
+    "output-manager": "^3.1.0",
+    "promise": "^8.1.0"
   },
   "devDependencies": {
-    "jest": "^23.1.0"
+    "jest": ">=25.1.0"
   },
   "jest": {
     "verbose": true
