--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "server-lite",
-  "version": "1.2.0",
+  "version": "1.5.0",
   "description": "Lightweight web server for node projects",
   "main": "lib/server-lite.js",
   "scripts": {
@@ -44,7 +44,8 @@
   "dependencies": {
     "date-utilz": "^0.0.3",
     "output-manager": "^3.1.0",
-    "promise": "^8.1.0"
+    "promise": "^8.1.0",
+    "string-utilz": "^1.4.0"
   },
   "devDependencies": {
     "jest": ">=25.1.0"
